# RuView-public-fork

./: CHANGELOG.md
.github/workflows/: aether-arena-harness.yml  ci.yml  firmware-ci.yml  ruview-swarm-ci.yml  verify-pipeline.yml
aether-arena/: STATUS.md
archive/v1/data/proof/: REFERENCE_PLATFORMS.md  verify.py
docs/: user-guide.md
docs/adr/: ADR-117-pip-wifi-densepose-modernization.md
firmware/esp32-csi-node/: README.md
python/src/: lib.rs
python/wifi_densepose/: __init__.py
scripts/: witness-adr-115.sh
ui/: viz.html
ui/mobile/: package-lock.json  package.json
v2/crates/wifi-densepose-bfld/: Cargo.toml
v2/crates/wifi-densepose-bfld/src/: lib.rs  rumqttc_publisher.rs
v2/crates/wifi-densepose-cli/: Cargo.toml
v2/crates/wifi-densepose-cli/src/: lib.rs  main.rs  room.rs
v2/crates/wifi-densepose-hardware/src/: bridge.rs  csi_frame.rs  esp32_parser.rs
v2/crates/wifi-densepose-pointcloud/src/: csi_pipeline.rs  stream.rs  viewer.html
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/examples/: mqtt_publisher.rs
v2/crates/wifi-densepose-sensing-server/src/: main.rs  tracker_bridge.rs
v2/crates/wifi-densepose-sensing-server/src/matter/: mod.rs
v2/crates/wifi-densepose-sensing-server/src/mqtt/: security.rs
v2/crates/wifi-densepose-sensing-server/tests/: mqtt_integration.rs
v2/crates/wifi-densepose-temporal/: Cargo.toml
v2/crates/wifi-densepose-temporal/src/: error.rs  lib.rs  sparse.rs
v2/crates/wifi-densepose-temporal/tests/: smoke.rs
